Link overflow fix

--- a/style.css
+++ b/style.css
@@ -227,4 +227,5 @@ section h2 {
 .references a {
     color: #000000;
     text-decoration: underline;
+    word-break: break-all;
 }
